--- a/tex/master.tex
+++ b/tex/master.tex
@@ -121,6 +121,7 @@
 \let\subsec\subsection
 
 \chapter{Supervised Learning Formulations}\label{chap:supervised}
+%test github PR
 \input{collection/01supervised.tex}
 
 \chapter{Asymptotic Analysis}\label{chap:asymp}
