--- a/tex/master.tex
+++ b/tex/master.tex
@@ -121,7 +121,7 @@
 \let\subsec\subsection
 
 \chapter{Supervised Learning Formulations}\label{chap:supervised}
-%test github PR
+%test github PR 2
 \input{collection/01supervised.tex}
 
 \chapter{Asymptotic Analysis}\label{chap:asymp}
